--- a/public_html/css/custom.css
+++ b/public_html/css/custom.css
@@ -81,8 +81,8 @@
   right: 5px;
   bottom: 5px;
   left: 5px; }
-.navbar {
-  display: none; }
+/*.navbar {*/
+  /*display: none; }*/
 
 /* Larger than phone */
 @media (min-width: 550px) {
